[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/duBoMsg/duBoMsg.gd" type="Script" id=1]
[ext_resource path="res://ui/msgBaseX/msgBaseX.tscn" type="PackedScene" id=2]

[node name="msgBaseX" instance=ExtResource( 2 )]
visible = true
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="." index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -556.0
margin_top = -283.0
margin_right = 556.0
margin_bottom = 283.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="CenterContainer" parent="Panel" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -362.0
margin_top = -232.0
margin_right = 368.0
margin_bottom = 232.0

[node name="GridContainer" type="HBoxContainer" parent="Panel/ScrollContainer" index="0"]
margin_left = 365.0
margin_top = 232.0
margin_right = 365.0
margin_bottom = 232.0
alignment = 1

[node name="Button" type="Button" parent="Panel" index="1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.5867
margin_top = -85.2134
margin_right = 57.6208
margin_bottom = -41.8381
text = "离开"

[node name="Label" type="Label" parent="Panel" index="2"]
margin_left = 936.505
margin_top = 476.844
margin_right = 944.505
margin_bottom = 509.844
text = "100g"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel" index="3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.2854
margin_top = 13.1079
margin_right = 10.7146
margin_bottom = 46.1079
text = "赌一把"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
